<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_height="wrap_content"
    android:layout_width="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">


    <TextView
        android:id="@+id/txtmessage"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:textSize="16sp"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        >
        <EditText
            android:hint="@string/nome"
            android:maxLength="25"
            android:id="@+id/txtinput"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            />
        <EditText
            android:hint="@string/ntm"
            android:maxLength="9"
            android:id="@+id/txtinput2"
            android:layout_below="@+id/txtinput"
            android:inputType="number"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            />
        <EditText
            android:hint="@string/ntf"
            android:maxLength="9"
            android:id="@+id/txtinput3"
            android:layout_below="@+id/txtinput2"
            android:inputType="number"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            />
        <EditText
            android:hint="@string/email"
            android:maxLength="29"
            android:id="@+id/txtinput4"
            android:layout_below="@+id/txtinput3"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            />
        <EditText
            android:hint="@string/idade"
            android:maxLength="3"
            android:id="@+id/txtinput5"
            android:inputType="number"
            android:layout_below="@+id/txtinput4"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            />
        <EditText
            android:hint="@string/altura"
            android:maxLength="4"
            android:id="@+id/txtinput6"
            android:inputType="numberDecimal"
            android:layout_below="@+id/txtinput5"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            />
        <EditText
            android:hint="@string/profissao"
            android:maxLength="25"
            android:id="@+id/txtinput7"
            android:layout_below="@+id/txtinput6"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            />
        <EditText
            android:hint="@string/genero"
            android:maxLength="9"
            android:id="@+id/txtinput8"
            android:layout_below="@+id/txtinput7"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            />
        <Button

            android:id="@+id/btdone"
            android:layout_below="@+id/txtinput8"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok"
            />

    </RelativeLayout>
</LinearLayout>
</ScrollView>