<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="16dp"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical"
    tools:context=".Editar">

    <EditText
        android:id="@+id/nm"
        android:maxLength="25"
        android:hint="Nome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/ntm"
        android:maxLength="9"
        android:hint="@string/ntm"
        android:inputType="number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/ntf"
        android:maxLength="9"
        android:hint="@string/ntf"
        android:inputType="number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/em"
        android:maxLength="29"
        android:hint="Email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/idad"
        android:maxLength="10"
        android:hint="@string/idade"
        android:inputType="date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/alt"
        android:maxLength="4"
        android:hint="@string/altura"
        android:inputType="numberDecimal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/prof"
        android:maxLength="25"
        android:hint="@string/profissao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/gen"
        android:maxLength="10"
        android:hint="@string/genero"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>



</LinearLayout>