<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="16dp"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    tools:context=".Ver">

    <TextView
        android:id="@+id/vnm"
        android:text="@string/nome"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/nm"
        android:layout_below="@+id/vnm"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/vntm"
        android:text="@string/ntm"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_below="@+id/nm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/ntm"
        android:textSize="20sp"
        android:layout_below="@+id/vntm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/vntf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nm"
        android:layout_marginTop="60dp"
        android:text="@string/ntf"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/ntf"
        android:textSize="20sp"
        android:layout_below="@+id/vntf"
        android:layout_alignParentRight="true"
        android:layout_alignLeft="@+id/vntf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/vgen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/prof"
        android:layout_marginTop="0dp"
        android:text="@string/genero"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/vem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ntm"
        android:layout_marginTop="64dp"
        android:text="@string/email"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/em"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/vem"
        android:layout_marginTop="0dp"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/vidad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/em"
        android:text="@string/idade"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/idad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/vidad"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/valt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/em"
        android:layout_alignParentRight="true"
        android:layout_marginRight="17dp"
        android:text="@string/altura"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/alt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/valt"
        android:layout_alignLeft="@+id/valt"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="0dp"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/vprof"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/alt"
        android:text="@string/profissao"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/prof"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/vprof"
        android:layout_marginTop="1dp"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/gen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/vgen"
        android:textSize="20sp" />

</RelativeLayout>